# mk-taller1-2015

./: .gitignore  .project  CMakeLists.txt  README.md
C-Example/: .project  test.txt
C-Example/CambiarColorPX/: 40_texture_manipulation.cpp  Makefile
Mortal Kombat/: .cproject  .gitignore  .project  Makefile
Mortal Kombat/data/: VectorDeSprites.txt
Mortal Kombat/data/config/: Campo.json  Parallax.json  TheSubway.json  default.json  ejemplo.json  ejemploOld.json  subwayLevel.json
Mortal Kombat/data/log/: .gitignore
Mortal Kombat/src/controller/: .gitignore  Combo.cpp  Combo.h  ComboController.cpp  ComboController.h  ControlModo.cpp  ControlModo.h  ControlSelectPlayer.cpp  ControlSelectPlayer.h  Controller.cpp  Controller.h  JoystickControl.cpp  JoystickControl.h  KeyboardControl.cpp  KeyboardControl.h  KeyboardControl1.cpp  KeyboardControl1.h  KeyboardControl2.cpp  KeyboardControl2.h  keyboardControl.cpp  keyboardControl.h
Mortal Kombat/src/model/: Capa.h  (+43 more)
Test/: README.txt
data/config/: Parallax.json
libs/: jsoncpp.cpp
src/controller/: Combo.h  ComboController.h  ControlModo.cpp  JoystickControl.cpp
src/model/: Capa.h  CapaFondo.cpp  CapaFondo.h  CapaPrincipal.h  Color.cpp  Color.h  DefaultSettings.cpp  DefaultSettings.h  Escenario.cpp  MenuSeleccion.h  Mundo.cpp  ObjetoDroppable.h  ParserJSON.cpp  ParserJSON.h  Personaje.cpp  Renderizable.h  SelectPlayer.cpp
src/view/: BotonesPantalla.cpp  LMusic.cpp  LMusic.h  LSound.cpp  LSound.h  LTexture.cpp  LTexture.h  MenuSelectPlayer.cpp  MenuSelectPlayer.h  Sprite.cpp  Sprite.h  TextBox.cpp  TextosPelea.h
(+87 files in other folders)
